--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon -L index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Heli Eronen",
   "license": "MIT",
@@ -19,6 +19,10 @@
   },
   "devDependencies": {
     "eslint": "^8.46.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
