--- a/osa7/bloglist/bloglist-frontend/package.json
+++ b/osa7/bloglist/bloglist-frontend/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^13.1.0",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-react": "^7.32.2",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "prettier": "3.1.1",
     "vite": "^4.4.5"
   },
   "jest": {
