--- a/osa7/bloglist/bloglist-frontend/package.json
+++ b/osa7/bloglist/bloglist-frontend/package.json
@@ -12,6 +12,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
